# SPTiR

./: Cargo.toml  Makefile.toml  index.html  katex-header.html  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yml
chapter_0_prelude/: all.html  index.html
chapters/: main.rs  prelude.rs  vis.rs
main/: all.html  fn.main.html  index.html
sptir/: all.html  fn.main.html  index.html  sidebar-items.js
sptir/color/: constant.FORWARD_BRADFORD_MATRIX.html  constant.INVERSE_BRADFORD_MATRIX.html  fn.compute_adaptation_matrix.html  index.html  sidebar-items.js  struct.Adaptation.html  struct.ColorMatrix3.html  struct.RGBAColor.html  struct.RGBColor.html  struct.RGBPrimaries.html  struct.xyY.html  trait.Colorspace.html
sptir/film/: index.html  sidebar-items.js  struct.Film.html
sptir/geometry/: index.html  sidebar-items.js  struct.Matrix4.html  struct.Point3.html  struct.Ray.html  struct.Transform3.html  struct.Vector3.html
sptir/math/: fn.integrate.html  index.html  sidebar-items.js
sptir/sampling/: enum.SampleDimension1D.html  enum.SampleDimension2D.html  index.html  sidebar-items.js  struct.IndependentSampler.html  struct.Sample1D.html  struct.Sample2D.html  trait.Sampler.html
sptir/spectrum/: constant.NUM_LANES.html  index.html  sidebar-items.js  struct.HeroWavelengthSample.html  struct.SpectralFlux.html  struct.SpectralRadiance.html  struct.SpectralRange.html  struct.SpectralReflectance.html  struct.SpectralWavelengthSamples.html  type.Lanes.html  (+2 more)
src/: film.rs  lib.rs  main.rs  math.rs  sampling.rs  spectrum.rs
vis/: all.html  fn.main.html  index.html
(+143 files in other folders)
