[package]
name = "sptir"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "main"
path = "bin/main.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
image = { version = "0.23.8", default_features = false, features = ["png"] }
