[package]
name = "sptir"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "chapter_0_prelude"
path = "chapters/prelude.rs"

[[bin]]
name = "main"
path = "chapters/main.rs"

[[bin]]
name = "vis"
path = "chapters/vis.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dependencies]
image = { version = "0.23.9", default_features = false, features = ["png"] }
rand = "0.7.3"
rand_xoshiro = "0.4.0"
numeric-array = "0.5.1"
float-ord = "0.2.0"

[profile.dev]
opt-level = 2
lto = 'thin'

[profile.release]
opt-level = 3
lto = 'fat'
